Fixed an issue with the frost text background in the About section. The text was too long to fir the container. The container size has been expanded to fix this.

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ header {
     min-width:33.33%;
     min-height:33.33%;
     max-width:50%;
-    max-height:50%;
+    max-height:80%;
     background-color:rgba(255, 255, 255, 0.65);
     border-radius:.5rem;
     color:black;
